--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
 
 								   <div class="annate-links">
 									<ul>
+									  <li><a href="#annata-2025">2025</a></li>
 									  <li><a href="#annata-2024">2024</a></li>
 									  <li><a href="#annata-2023">2023</a></li>
 									  <li><a href="#annata-2022">2022</a></li>
@@ -126,7 +127,7 @@
 		Acidità: 0,22% <br/>
 		Resa: 10,3% <br/>
 		Totale: 150kg <br/>
-		Produzione sant'Antonio: 150g <br/>
+		Produzione sant'Antonio: 150kg <br/>
 		Produzione Giardini: 0kg <br/>
 		Litri prodotti: 22,7L <br/>
 		Metodo: estrazione a freddo <br/></p>
@@ -177,6 +178,23 @@
 		Produzione sant'Antonio: 130kg <br/>
 		Produzione Giardini: 60kg <br/>
 		Litri prodotti: 19L <br/>
+		Metodo: estrazione a freddo <br/></p>
+    </article>
+
+
+		<!-- Annata 2025 -->
+    <article id="annata-2025">
+        <h2 class="major">Annata 2025</h2>
+        <span class="image main"><img src="images/2025.jpg" alt="Annata 2025" /></span>
+        <p>Il raccolto del 2025 è stato caratterizzato da un meteo leggermente nuvoloso ma per fortuna senza pioggie. La raccolta è inizata sabato 18 ottobre in località "Giardini" per poi proseguire il giorno sucessivo a "Sant’Antonio". Alla brucatura hanno partecipato Ivana Pedruzzi, Marco Bernardi, Alessandro Bernardi, Irene Forzatti, Monica Bernardi, Domenico (Renzo) Pasina, Sara Pasina, Yuri, Paola Bernardi, Giovanni Bernardi e Jacopo Bernardi. Un piccolo aiuto è stato dato anche da Francesca Bernardi e Aurora Lussoso preparando un piccolo rinfresco per spezzare la mattinata e offrendo supporto morale. Dopo aver lavorato la mattina una meritata pausa pranzo a base di lasagne era dovuta e nel pomeriggio è stata finita la raccolta. La produzione è stata migliore di quello che ci si aspettava, ottenendo non una grandissima quantità di olive ma con una resa elevatissima, la più alta fino ad ora!</p>
+		<p><b>Dati importanti</b> <br />
+		Brucatura: 19/10/2025 <br/>
+		Acidità: -% <br/>
+		Resa: 10,7% <br/>
+		Totale: 145kg <br/>
+		Produzione sant'Antonio: 105kg <br/>
+		Produzione Giardini: 40kg <br/>
+		Litri prodotti: 16,9L <br/>
 		Metodo: estrazione a freddo <br/></p>
     </article>
 						
